--- a/config/database.yml
+++ b/config/database.yml
@@ -82,6 +82,9 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
+  encoding: unicode
   database: app_production
   username: app
+  # username: db
   password: <%= ENV['APP_DATABASE_PASSWORD'] %>
