--- a/config/database.yml
+++ b/config/database.yml
@@ -84,7 +84,8 @@ production:
   <<: *default
   adapter: postgresql
   encoding: unicode
-  database: app_production
-  username: app
+  # encoding: unicode
+  # database: app_production
+  # username: app
   # username: db
   password: <%= ENV['APP_DATABASE_PASSWORD'] %>
